# mersenne-random-pure64

./: .travis.yml  TODO  mersenne-random-pure64.cabal  mt19937-random.cabal
System/Random/Mersenne/: Pure.hsc  Pure64.hs  Pure64.hsc
System/Random/Mersenne/Pure64/: Base.hsc  MTBlock.hs
tests/: Unit.hs  copy.hs
