name:            mt19937-random
version:         0.1
homepage:        http://code.haskell.org/~dons/code/mt19937-random
synopsis:        Generate high quality pseudorandom numbers using a Mersenne Twister
description:
    The Mersenne twister is a pseudorandom number generator developed by
    Makoto Matsumoto and Takuji Nishimura that is based on a matrix linear
    recurrence over a finite binary field. It provides for fast generation
    of very high quality pseudorandom numbers
    .
category:        Math, System
license:         BSD3
license-file:    LICENSE
copyright:       (c) 2008. Don Stewart <dons@galois.com>
author:          Don Stewart
maintainer:      Don Stewart <dons@galois.com>
cabal-version: >= 1.2.0
build-type:      Configure
tested-with:     GHC ==6.8.2
build-type:      Configure

flag small_base
  description: Build with new smaller base library
  default:     False

library
    exposed-modules: System.Random.Mersenne.Pure
    extensions:      CPP, ForeignFunctionInterface, BangPatterns

    if flag(small_base)
        build-depends: base  < 3
    else
        build-depends: base >= 3, old-time

    cc-options:
        -O3 -finline-functions -fomit-frame-pointer
        -fno-strict-aliasing --param max-inline-insns-single=1800

    ghc-options:     -Wall -O2 -fvia-C -fexcess-precision

    c-sources:        cbits/mt19937-64.c
                      cbits/mt19937-64-unsafe.c
    include-dirs:     include
    includes:
    install-includes: mt19937-64.h
                      mt19937-64-unsafe.h
